--- a/expo-resource-finder/package.json
+++ b/expo-resource-finder/package.json
@@ -12,30 +12,26 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "@remix-run/server-runtime": "^2.17.0",
     "@tamagui/core": "^1.120.0",
     "@tamagui/themes": "^1.120.0",
     "@tanstack/react-query": "^5.17.0",
-    "cookie": "^0.7.2",
-    "expo": "~53.0.20",
+    "expo": "~50.0.0",
     "expo-constants": "~15.4.0",
     "expo-font": "~11.10.0",
     "expo-linking": "~6.2.0",
     "expo-location": "~16.5.0",
-    "expo-router": "^5.1.4",
+    "expo-router": "~3.4.0",
     "expo-splash-screen": "~0.26.0",
     "expo-status-bar": "~1.11.0",
     "expo-system-ui": "~2.9.0",
     "expo-web-browser": "~12.8.0",
-    "ip": "^2.0.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-vector-icons": "^10.0.3",
-    "semver": "^7.7.2"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
