split TS configs, consolidate assets, fix types, update Calendar component, configure Tailwind/PostCSS

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "drizzle-kit": "^0.18.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.5",
     "vite": "^7.1.5"
   },
   "optionalDependencies": {
