--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "name": "rest-express",
   "version": "1.0.0",
   "scripts": {
-    "dev": "tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
+    "dev": "tsx -p server/tsconfig.json server/index.ts",
+    "client:dev": "cd client && vite --config ../vite.config.mjs",
+    "build": "vite build --config client/vite.config.ts && esbuild server/index.ts --platform=node --bundle --outdir=dist",
+    "check": "tsc -p server/tsconfig.json && tsc -p client/tsconfig.json --noEmit",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
@@ -87,7 +87,6 @@
     "drizzle-kit": "^0.18.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "tsx": "^4.20.5",
     "vite": "^7.1.5"
   },
   "optionalDependencies": {
