fix dev script and add missing Express dependency

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "rest-express",
   "version": "1.0.0",
   "scripts": {
-    "dev": "tsx -p server/tsconfig.json server/index.ts",
+    "dev": "tsx server/index.ts --tsconfig server/tsconfig.json",
     "client:dev": "cd client && vite --config ../vite.config.mjs",
     "build": "vite build --config client/vite.config.ts && esbuild server/index.ts --platform=node --bundle --outdir=dist",
     "check": "tsc -p server/tsconfig.json && tsc -p client/tsconfig.json --noEmit",
@@ -23,6 +23,7 @@
     "embla-carousel-react": "^8.3.0",
     "expo": "^53.0.22",
     "expo-constants": "^14.0.0",
+    "express": "^5.1.0",
     "firebase": "^11.8.1",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
@@ -76,7 +77,7 @@
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/express": "4.17.21",
+    "@types/express": "^4.17.21",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
     "@types/react-day-picker": "^5.2.1",
