--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "tsx server/index.ts --tsconfig server/tsconfig.json",
     "client:dev": "cd client && vite --config ../vite.config.mjs",
     "build": "vite build --config client/vite.config.ts && esbuild server/index.ts --platform=node --bundle --outdir=dist",
+    "build:zipdb": "ts-node scripts/build-zipcode-db.ts",
     "check": "tsc -p server/tsconfig.json && tsc -p client/tsconfig.json --noEmit",
     "db:push": "drizzle-kit push"
   },
@@ -78,6 +79,7 @@
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/csv-parse": "^1.1.12",
     "@types/express": "^4.17.21",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
@@ -86,6 +88,7 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.21",
+    "csv-parse": "^6.1.0",
     "drizzle-kit": "^0.18.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
