--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "sb211-monorepo",
   "version": "1.0.0",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "scripts": {
     "dev": "pnpm -r run dev",
     "client:dev": "cd client && vite --config ../vite.config.mjs",
@@ -32,6 +28,7 @@
     "expo": "^53.0.22",
     "expo-constants": "^14.5.1",
     "expo-linking": "^8.0.7",
+    "expo-location": "^19.0.7",
     "express": "^4.19.2",
     "firebase": "^11.8.1",
     "framer-motion": "^11.13.1",
@@ -87,7 +84,6 @@
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/csv-parse": "^1.1.12",
     "@types/express": "^4.17.21",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
