--- a/packages/geo/package.json
+++ b/packages/geo/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "@sb211/shared-schema",
+  "name": "@sb211/geo",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -b"
-  },
-  "dependencies": {
-    "zod": "^3.0.0"
   }
 }
