--- a/packages/geo/tsconfig.json
+++ b/packages/geo/tsconfig.json
@@ -4,19 +4,9 @@
     "composite": true,
     "declaration": true,
     "outDir": "dist",
-    "target": "ES2015",
-    "module": "ESNext",
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "skipLibCheck": true,
-    "allowJs": true,
-    "checkJs": false,
     "rootDir": "src",
     "resolveJsonModule": true,
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
-  "include": [
-    "src/**/*",
-    "src/**/*.json"
-  ]
+  "include": ["src/**/*","src/**/*.ts","src/zipcode-db.json"]
 }
