--- a/packages/lib/tsconfig.json
+++ b/packages/lib/tsconfig.json
@@ -8,7 +8,11 @@
     "module": "ESNext",
     "jsx": "react",
     "esModuleInterop": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
-  "include": ["lib/**/*"]
+  "include": ["src/**/*"],
+  "references": [
+    { "path": "../shared-schema" }
+  ]
 }
