--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
     "@types/cors": "^2.8.19",
+    "@expo/metro-config": "^0.20.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -34,6 +35,7 @@
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
+    "metro": "^0.79.0",
     "native-base": "^2.15.2",
     "node-fetch": "^3.3.2",
     "path-to-regexp": "^6.2.1",
@@ -85,7 +87,7 @@
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/express": "^4.17.21",
-    "@types/node": "^24.3.1",
+    "@types/node": "^24.3.3",
     "@types/react": "^19.1.12",
     "@types/react-day-picker": "^5.2.1",
     "@types/react-dom": "^19.1.9",
@@ -103,5 +105,8 @@
   },
   "overrides": {
     "esbuild": "^0.25.0"
-  }
+  },
+  "resolutions": {
+  "metro": "0.82.4"
+}
 }
