--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -12,28 +13,28 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "@sb211/taxonomy": "workspace:*",
-    "@sb211/ui-kit": "workspace:*",
-    "@sb211/lib": "workspace:*",
-    "@sb211/shared-schema": "workspace:*",
     "@sb211/geo": "workspace:*",
     "@sb211/geocalc": "workspace:*",
+    "@sb211/lib": "workspace:*",
+    "@sb211/shared-schema": "workspace:*",
+    "@sb211/taxonomy": "workspace:*",
+    "@sb211/ui-kit": "workspace:*",
     "expo": "~51.0.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "@expo/vector-icons": "^14.1.0"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
   }
