--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.20.17",
     "@hookform/resolvers": "^5.2.1",
     "@neondatabase/serverless": "^1.0.1",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
     "@types/cors": "^2.8.19",
-    "@expo/metro-config": "^0.20.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -39,7 +39,7 @@
     "native-base": "^2.15.2",
     "node-fetch": "^3.3.2",
     "path-to-regexp": "^6.2.1",
-    "react": "^19.1.1",
+    "react": "^18.2.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.53.1",
@@ -88,9 +88,9 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/express": "^4.17.21",
     "@types/node": "^24.3.3",
-    "@types/react": "^19.1.12",
+    "@types/react": "18.2.0",
     "@types/react-day-picker": "^5.2.1",
-    "@types/react-dom": "^19.1.9",
+    "@types/react-dom": "18.2.0",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.21",
@@ -98,6 +98,7 @@
     "drizzle-kit": "^0.18.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "typescript": "^5.9.2",
     "vite": "^7.1.5"
   },
   "optionalDependencies": {
@@ -107,6 +108,6 @@
     "esbuild": "^0.25.0"
   },
   "resolutions": {
-  "metro": "0.82.4"
-}
+    "metro": "0.82.4"
+  }
 }
