--- a/packages/ui-kit/tsconfig.json
+++ b/packages/ui-kit/tsconfig.json
@@ -1,17 +1,52 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "composite": true,
-    "declaration": true,
-    "outDir": "dist",
-    "rootDir": "src",
-    "tsBuildInfoFile": "./dist/.tsbuildinfo"
+    "target": "ESNext",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "strict": true,
+    "noEmit": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "allowImportingTsExtensions": true,
+    "incremental": true,
+    "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
+    "baseUrl": ".",
+    "allowSyntheticDefaultImports": true,
+    "jsx": "react-native",
+    "paths": {
+      "@sb211/hooks/*": [
+        "../../apps/mobile/src/hooks/*"
+      ],
+      "@sb211/lib/*": [
+        "../../packages/lib/src/*"
+      ],
+      "@sb211/components/*": [
+        "../../packages/components/src/*"
+      ],
+      "@sb211/shared-schema": [
+        "../../packages/shared-schema/src/index.ts"
+      ],
+      "@sb211/assets/*": [
+        "../../apps/mobile/assets/*"
+      ]
+    },
+    "typeRoots": [
+      "../../node_modules/@types",
+      "./node_modules/@types"
+    ]
   },
-  "include": ["src/**/*"],
-  "references": [
-    { "path": "../hooks" },
-    { "path": "../components" },
-    { "path": "../lib" },
-    { "path": "../shared-schema" }
+  "include": [
+    "src",
+    "../../apps/mobile/src/hooks"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "client",
+    "**/dist",
+    "**/.expo",
+    "**/.next"
   ]
 }
