optimize file structure

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,16 +14,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^6.4.1",
-    "@sb211/geo": "workspace:*",
-    "@sb211/geocalc": "workspace:*",
-    "@sb211/lib": "workspace:*",
-    "@sb211/shared-schema": "workspace:*",
-    "@sb211/taxonomy": "workspace:*",
-    "@sb211/ui-kit": "workspace:*",
     "expo": "~51.0.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
