--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,8 +14,7 @@
     "cors": "^2.8.5",
     "axios": "^1.6.0",
     "drizzle-orm": "^0.39.1",
-    "@neondatabase/serverless": "^1.0.1",
-    "@sb211/shared-schema": "workspace:*"
+    "@neondatabase/serverless": "^1.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
