--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.4.1",
