improve monorepo code structure

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -35,6 +35,6 @@
     "src/utils/session.ts",
     "src/utils/queryClient.ts",
     "src/utils/distanceUtils.ts",
-    "src/utils/api.ts"
+    "src/api/api.ts"
   ]
 }
