--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -2,8 +2,8 @@
   "name": "@sb211/mobile",
   "version": "1.0.0",
   "private": true,
-  "main": "src/index.js",
-  "type": "module",
+  "main": "App.tsx",
+  "type": "commonjs",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -13,15 +13,17 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.4",
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
-    "@react-native-picker/picker": "^2.11.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/drawer": "^6.4.1",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/native-stack": "^7.3.26",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.0",
     "expo-status-bar": "~1.12.1",
@@ -34,7 +36,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tanstack/react-query": "^5.89.0",
     "@types/react": "~18.2.0",
+    "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
   }
