--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "expo start",
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "type-check": "tsc --noEmit"
