setup ios and android

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "metro": "^0.79.0",
     "node-fetch": "^3.3.2",
     "path-to-regexp": "^6.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.53.1",
     "react-i18next": "^13.0.0",
     "react-native": "0.72.0",
