--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/runtime": "^7.28.4",
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/prebuild-config": "^54.0.3",
     "@expo/vector-icons": "^14.1.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
@@ -26,13 +27,13 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.0",
+    "expo": "~54.0.9",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "^4.16.0",
+    "react-native-screens": "3.31.1",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
@@ -41,6 +42,8 @@
     "@types/react": "~18.2.0",
     "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.0",
+    "expo": "~51.0.0",
+    "expo-modules-autolinking": "^3.0.12",
     "typescript": "~5.8.3"
   }
 }
