--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,8 +15,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
+    "@expo/config-plugins": "~8.0.0",
     "@expo/metro-runtime": "~5.0.4",
-    "@expo/prebuild-config": "^54.0.3",
+    "@expo/prebuild-config": "~7.0.0",
     "@expo/vector-icons": "^14.1.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
@@ -27,7 +28,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~54.0.9",
+    "expo": "~51.0.39",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -43,7 +44,6 @@
     "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~51.0.0",
-    "expo-modules-autolinking": "^3.0.12",
     "typescript": "~5.8.3"
   }
 }
