--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,35 +15,37 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
-    "@expo/config-plugins": "~8.0.0",
-    "@expo/metro-runtime": "~5.0.4",
-    "@expo/prebuild-config": "~7.0.0",
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-picker/picker": "2.7.5",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.39",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "^0.20.0"
+    "@types/react": "~19.1.10",
+    "expo-font": "~14.0.8",
+    "expo-status-bar": "~3.0.8",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "^0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
+    "typescript": "~5.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@tanstack/react-query": "^5.89.0",
-    "@types/react": "~18.2.0",
-    "@types/react-native": "^0.72.8",
+    "@types/react": "^19.1.10",
     "babel-plugin-module-resolver": "^5.0.0",
-    "expo": "~51.0.0",
-    "typescript": "~5.8.3"
+    "expo": "^54.0.9",
+    "typescript": "~5.3.3"
   }
 }
