--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,51 +1,59 @@
 {
-  "name": "@sb211/mobile",
-  "version": "1.0.0",
-  "private": true,
+  "name": "mobile",
   "main": "App.tsx",
-  "type": "commonjs",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "expo start",
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "type-check": "tsc --noEmit"
+    "lint": "expo lint"
   },
   "dependencies": {
-    "@babel/runtime": "^7.28.4",
-    "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-picker/picker": "2.11.1",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/drawer": "^6.7.2",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
-    "@react-navigation/stack": "^6.4.1",
-    "@types/react": "~19.1.10",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-picker/picker": "^2.11.2",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/drawer": "^7.5.8",
+    "@react-navigation/elements": "^2.6.3",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/stack": "^7.4.8",
+    "@tanstack/react-query": "^5.89.0",
+    "clsx": "^2.1.1",
+    "expo": "~54.0.9",
+    "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-location": "^19.0.7",
+    "expo-router": "~6.0.7",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-native": "^0.81.4",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.7",
+    "firebase": "^12.3.0",
+    "node-fetch": "^3.3.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
+    "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "typescript": "~5.9.2"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@tanstack/react-query": "^5.89.0",
-    "@types/react": "^19.1.10",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "expo": "^54.0.9",
-    "typescript": "~5.3.3"
-  }
+    "@types/node-fetch": "^2.6.13",
+    "@types/react": "~19.1.0",
+    "@types/react-navigation": "^3.0.8",
+    "eslint": "^9.25.0",
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
+  },
+  "private": true
 }
