--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -51,6 +51,7 @@
     "@types/node-fetch": "^2.6.13",
     "@types/react": "~19.1.0",
     "@types/react-navigation": "^3.0.8",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
