--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/drawer": "^7.5.8",
@@ -21,6 +21,8 @@
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.4.8",
     "@tanstack/react-query": "^5.89.0",
+    "@types/react": "19.1.0",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "expo": "~54.0.9",
     "expo-constants": "~18.0.9",
@@ -28,7 +30,7 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
     "expo-linking": "~8.0.8",
-    "expo-location": "^19.0.7",
+    "expo-location": "~19.0.7",
     "expo-router": "~6.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -39,7 +41,6 @@
     "node-fetch": "^3.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "@types/react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
@@ -50,6 +51,7 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/node-fetch": "^2.6.13",
     "@types/react": "~19.1.0",
     "@types/react-navigation": "^3.0.8",
