--- a/package.json
+++ b/package.json
@@ -52,11 +52,14 @@
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
+    "@types/node": "^24.5.2",
     "@types/node-fetch": "^2.6.13",
     "@types/react": "~19.1.0",
     "@types/react-navigation": "^3.0.8",
     "autoprefixer": "^10.4.21",
     "babel-plugin-module-resolver": "^5.0.2",
+    "csv-parse": "^6.1.0",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "postcss": "^8.5.6",
