Fix ResourceDetailScreen errors and resolve "Resource Not Found" issues
- Diagnosed and resolved issues causing "Resource Not Found" error in ResourceDetailScreen
- Ensured resources are properly stored and retrievable for detail view
- Restarted Metro Bundler and validated resource existence before navigation
- Checked and reconfigured SecureStore/AsyncStorage for resource storage
- Updated troubleshooting logic and improved navigation param handling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
-    "lib": ["dom", "dom.iterable", "es6"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "es6"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -20,17 +24,19 @@
     "emitDeclarationOnly": false,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "~/*": ["./*"]
+      "@/*": [
+        "./src/*"
+      ],
+      "~/*": [
+        "./*"
+      ]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     "**/*.js",
-    "**/*.jsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "**/*.jsx"
   ],
   "exclude": [
     "node_modules",
