feat(resource): Fix ResourceList distance calculation and ResourceDetail data loading
Resolve an issue where resource distance sorting and display was failing due to improper handling of the `zipCode` state between HomeScreen and ResourceListScreen. Ensure the correct ZIP code from navigation parameters is used for geolocation queries. Also, implement a robust cache/API fallback logic in `fetchServiceAtLocationDetails` to eliminate the initial blank screen on ResourceDetailScreen.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "allowSyntheticDefaultImports": true,
-    "jsx": "react-native",
+    "jsx": "react-jsx",
     "lib": [
       "dom",
       "dom.iterable",
