--- a/package.json
+++ b/package.json
@@ -15,56 +15,37 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-picker/picker": "2.11.1",
-    "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/drawer": "^7.5.0",
-    "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
     "@tanstack/react-query": "^5.89.0",
     "@types/react": "19.1.0",
-    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "expo": "~54.0.9",
-    "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
-    "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
-    "expo-router": "~6.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
     "firebase": "^12.3.0",
     "node-fetch": "^3.3.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^24.5.2",
     "@types/node-fetch": "^2.6.13",
     "@types/react": "~19.1.0",
-    "@types/react-navigation": "^3.0.8",
-    "autoprefixer": "^10.4.21",
     "babel-plugin-module-resolver": "^5.0.2",
     "csv-parse": "^6.1.0",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.2"
   },
