--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@tanstack/react-query": "^5.89.0",
     "@types/react": "19.1.0",
     "clsx": "^2.1.1",
-    "expo": "~54.0.9",
-    "expo-font": "~14.0.8",
+    "expo": "^54.0.13",
+    "expo-font": "~14.0.9",
     "expo-location": "~19.0.7",
     "firebase": "^12.3.0",
     "node-fetch": "^3.3.2",
